using UnityEngine;

public class Hill : Entity
{
    public Hill(Vector2 spawnPosition) : base(spawnPosition)
    {
    }
}
