using UnityEngine;

public class Pond : Entity
{
    public Pond(Vector2 spawnPosition) : base(spawnPosition)
    {
    }
}
