using UnityEngine;

public class River : Entity
{
    public River(Vector2 spawnPosition) : base(spawnPosition)
    {
    }
}
